--- a/java/rest/sms_verify/build.gradle
+++ b/java/rest/sms_verify/build.gradle
@@ -17,14 +17,16 @@ plugins {
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    maven { 
+        url = "https://repo.maven.apache.org/maven2"
+    } 
 }
 
 dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
-    compile 'org.slf4j:slf4j-api:1.7.21'
-    compile 'org.asynchttpclient:async-http-client:2.12.3'
+    implementation 'org.slf4j:slf4j-api:2.0.6'
+    implementation 'org.asynchttpclient:async-http-client:2.12.3'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.13'
@@ -32,5 +34,5 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClassName = 'sendOTP.App'
+    mainClassName = 'App'
 }
