adding Telesign SDK files to .gitignore

--- a/java/sdk/java_telesign_enterprise/sms_verify/.gitignore
+++ b/java/sdk/java_telesign_enterprise/sms_verify/.gitignore
@@ -1,5 +1,8 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 
+# Ignore Telesign SDK files manually copied in
+**/app/src/main/java/com/
+
 # Ignore Gradle build output directory
 build
