--- a/java/sdk/java_telesign_enterprise/sms_verify/.gitignore
+++ b/java/sdk/java_telesign_enterprise/sms_verify/.gitignore
@@ -2,7 +2,7 @@
 .gradle
 
 # Ignore Telesign SDK files manually copied in
-**/app/src/main/java/com/*
+**/src/main/java/com/telesign/enterprise/*
 
 # Ignore Gradle build output directory
 build
